--- a/src/components/LinkBlurb.astro
+++ b/src/components/LinkBlurb.astro
@@ -10,7 +10,7 @@ const {title="", href="#"} = Astro.props
 	<p class="content flex-1">
 		<slot/>
 	</p>
-	<a class="block font-base antialiased text-base sm:text-lg text-accent-color font-bold flex-none mt-3" href={href}>
+	<a class="block font-base antialiased text-base sm:text-lg text-title-primary-color font-bold flex-none mt-3" href={href}>
 		» Read More
 	</a>
 </div>
