--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,15 +37,15 @@ const postColumns = (index) => {
     <section itemscope itemtype="https://schema.org/Event" class="w-full col-span-6 sm:col-span-3 content-container" >
       <div class="flex flex-col justify-between items-center h-full text-2xl sm:text-3xl  font-medium tracking-wide">
         <span class="block text-title-primary-color text-center mb-2 hidden md:block font-emphasis" itemprop="name">
-          <span class="text-gray-300">HONK!</span> FEST WEST
+          <span class="text-main-color-300 ">HONK!</span> FEST WEST
         </span>
         <div class="flex flex-col lg:flex-row justify-center items-center md:mb-2 w-full">
-          <span class="block mb-2 lg:mb-0 text-gray-300 tracking-normal md:mr-2 font-emphasis text-center">
-            <time itemprop="startDate" content="2022-06-03">JUNE 3 - 5, 2022</time>
+          <span class="block mb-2 lg:mb-0 text-main-color-300  tracking-normal md:mr-2 font-emphasis text-center">
+            <time itemprop="startDate" content="2022-06-03"><span class="text-title-primary-color">JUNE</span> 3 - 5, 2022</time>
           </span>
         </div>
         <span class="text-title-primary-color text-center block font-emphasis" itemprop="location">
-          <span class="text-gray-300">SEATTLE,</span> WA
+          <span class="text-main-color-300 ">SEATTLE,</span> WA
         </span>
       </div>
     </section>
@@ -67,10 +67,10 @@ const postColumns = (index) => {
 
           <div id="mc_embed_signup_scroll" class="flex flex-col justify-center items-center w-full">
             <div class="hidden md:flex w-full md:mb-4 justify-center items-center">
-              <label class="text-gray-300 mr-2 mb-0 block text-center text-2xl md:text-3xl" for="mce-EMAIL">
+              <label class="text-main-color-300 mr-2 mb-0 block text-center text-2xl md:text-3xl " for="mce-EMAIL">
                 EMAIL:
               </label>
-              <input type="email" value="" name="EMAIL" class="bg-white bg-opacity-70 block w-full font-base text-lg px-2 py-1" id="mce-EMAIL">
+              <input type="email" value="" name="EMAIL" class="bg-main-color-200 bg-opacity-80 block w-full font-base text-lg px-2 py-1" id="mce-EMAIL">
             </div>
             <div id="mce-responses" class="clear">
               <div class="hidden" id="mce-error-response"></div>
@@ -86,7 +86,7 @@ const postColumns = (index) => {
               value="Subscribe" 
               name="subscribe" 
               id="mc-embedded-subscribe" 
-              class="border-2 border-gray-400 text-gray-100 bg-gray-500 rounded font-base text-base sm:text-lg px-2 py-1">
+              class=" text-main-color-200 bg-accent-color bg-opacity-80 hover:bg-opacity-90 rounded font-base text-base sm:text-lg px-2 py-1">
           </div>
         </form>
       </div>
@@ -107,7 +107,7 @@ const postColumns = (index) => {
         <p>
           The Volunteer Coordinator is our chief cat wrangler and fun instigator, and the source of sunshine for all our eager volunteers. Responsible for the recruitment, retention, rostering and wrangling of both year-round and event-based volunteers, the VC is the most vital link in the entire festival’s chain of awesomeness.
         </p>
-        <a class="block font-base rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90" href="/volunteer/committee-form?position=Volunteer%20Coordinator" >
+        <a class="block font-base rounded antialiased text-main-color-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90" href="/volunteer/committee-form?position=Volunteer%20Coordinator" >
 			    » Apply Here
 		    </a>
       </div>
@@ -201,13 +201,13 @@ const postColumns = (index) => {
 
     <!-- SUPPORT DUAMISH  -->
     <div class="col-span-6 content-container">
-      <p class="content font-base text-gray-700 italic">
+      <p class="content font-base italic">
         H!FW acknowledges that we are on the traditional land of the first people of Seattle
         — the Duwamish People past and present — and honor with gratitude the land itself,
         the Duwamish Tribe, and the Coast Salish people.
       </p>
       <br/>
-      <a class="font-base link text-accent-color font-bold text-base sm:text-lg" href="https://www.duwamishtribe.org/donate">
+      <a class="font-base link text-title-primary-color font-bold text-base sm:text-lg" href="https://www.duwamishtribe.org/donate">
         » Please support the Duwamish Tribe
       </a>
     </div>
