--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,23 +8,25 @@ import navigation from '@data/navigation.json';
 
 const golden_dino = true;
 ---
-<div class="bg-main-color-400 bg-opacity-80">
+<div class="bg-[#962C2B] ">
 
   <!-- SPONSORS -->
-  <div class="border-t-4 border-b-4 border-main-color-400 ">
+  <div class="border-b-[1rem] border-[#0E4341] border-opacity-80">
     <div class="max-w-screen-xl w-full mx-auto pt-3 px-3 sm:py-4 sm:px-6 flex flex-wrap sm:flex-nowrap">
 
       <!-- SPONSORS -->
       <div class="flex flex-col items-center w-full mb-2 sm:mb-0">
-        <h3 class="font-emphasis text-main-color-50 text-3xl mb-2 sm:mb-3 md:mb-4 tracking-wide">SPONSORS</h3>
-        <div class="flex flex-wrap justify-around align-center sm:w-3/4 items-center">
+        <div class="flex flex-wrap justify-around align-center sm:w-3/4 items-center pt-3">
+          <span class="text-xs leading-tight w-1/5 text-main-color-300 mr-6 text-justify text-opacity-80 pr-3">
+            This project is supported in part by the National Endowment for the Arts and the WA State Arts Commission.
+          </span>
           {sponsors.arts.map((sponsor) => (
-            <div class="mx-2 mb-3">
+            <div class="mx-2 mb-3 flex-1">
               <a href="{ sponsor.link }" class="rounded block">
                 <Image
                   src={ sponsor.image }
                   alt={ sponsor.name }
-                  className="rounded w-auto h-14"
+                  className="rounded h-14"
                   height="48"
                   tr={ sponsor.tr }
                 />
@@ -39,12 +41,12 @@ const golden_dino = true;
 
 <!-- BOTTOM -->
 <div class="max-w-screen-xl w-full mx-auto p-1 sm:p-0 flex flex-wrap sm:flex-nowrap items-center bg-main-color bg-opacity-40">
-  <a class="w-full text-center text-main-color-50 text-lg font-bold font-base block w-full sm:w-1/3 m-1 sm:m-4" href="/"
+  <a class="w-full text-center text-main-color-900 text-lg font-bold font-base block w-full sm:w-1/3 m-1 sm:m-4" href="/"
     >© 2022 HONK! Fest West</a
   >
   <ul class="items-center h-full flex-1 w-full sm:w-1/3 m-1 sm:m-4 hidden sm:flex justify-around ">
     {Object.keys(navigation.social).map((item) => (
-      <li class="text-main-color-50">
+      <li class="text-main-color-900">
         <SocialLinks link={item} size="1.25rem"/>
       </li>
     ))}
