--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -6,16 +6,16 @@ const _id = id.length ? id : title
 
 <style>
 	.title {
-		@apply flex flex-wrap text-2xl sm:text-3xl font-title border-b-4 border-opacity-60 border-accent-color border-dotted mb-4 pb-1;
+		@apply flex flex-wrap text-2xl sm:text-3xl font-title border-b-4  border-main-color-700 border-opacity-100 border-dotted mb-4 pb-1;
 	}
 </style>
 
 
 <h2 id={_id} class={`title ${center ? 'justify-center': ''}`}>
-	<span class={`text-gray-300 ${center && subtitle ? 'ml-3': ''} ${subtitle ? 'mr-3' : ''} block ${center ? 'text-center' : ''}`}>
+	<span class={`text-main-color-300  ${center && subtitle ? 'ml-3': ''} ${subtitle ? 'mr-3' : ''} block ${center ? 'text-center' : ''}`}>
 		{title}
 	</span>
-	<span class={`text-main-color-50 block ${center && subtitle ? 'ml-3': ''} ${subtitle ? 'mr-3' : ''} ${center ? 'text-center' : ''}`}>
+	<span class={`text-title-primary-color block ${center && subtitle ? 'ml-3': ''} ${subtitle ? 'mr-3' : ''} ${center ? 'text-center' : ''}`}>
 		{subtitle}
 	</span>
 </h2>
