--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -20,18 +20,18 @@ const { title } = Astro.props;
 
     <!-- BACKGROUND IMAGE -->
     <div class="w-full h-full fixed top-0 left-0">
-	    <div class="bg-main-color w-full h-full fixed top-0 left-0"></div>
-      <div class="bg-site opacity-30 w-full h-full fixed top-0 left-0"></div>
+	    <div class="bg-[#D2AC54] w-full h-full fixed top-0 left-0"></div>
+      <div class="bg-site  w-full h-full fixed top-0 left-0"></div>
     </div>
 
     <div class="w-full h-full absolute top-0 left-0 flex flex-col justify-between">
       <!-- HEADER -->
-      <header class="gradient-radial-background w-full px-6 max-w-screen-xl w-full mx-auto px-3 sm:px-6">
+      <header class=" w-full mx-auto">
         <Header />
       </header>
 
       <!-- MAIN -->
-      <main class="gradient-edge-background max-w-screen-xl pb-6 sm:pb-10 px-3 sm:px-6 w-full mx-auto">
+      <main class=" max-w-screen-xl pb-6 sm:pb-10 px-3 sm:px-6 w-full mx-auto">
         <slot />
       </main>
 
