--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -12,7 +12,7 @@ import sponsors from '@data/sponsors.json'
 		<div class="w-full md:w-1/3">
 			<div class="content-container">
 				<div class="flex flex-col items-center">
-					<a href="https://venmo.com/honkfestwest" class="flex md:hidden items-center mb-8 py-3 px-5 rounded-full bg-main-color-200">
+					<a href="https://venmo.com/honkfestwest" class="flex md:hidden items-center mb-8 py-3 px-5 rounded-full border-4 border-main-color-300 border-opacity-80">
 						<img 
 							src="https://cdn1.venmo.com/marketing/images/branding/venmo-icon.svg"
 							alt=""
@@ -21,7 +21,7 @@ import sponsors from '@data/sponsors.json'
 							class="w-6 mr-2">
 						<span class="block text-lg content">Donate with Venmo</span>
 					</a>
-					<a href="https://www.paypal.com/donate/?hosted_button_id=EE2WLALDX9GCA" class="flex items-center py-3 px-5 rounded-full bg-main-color-200">
+					<a href="https://www.paypal.com/donate/?hosted_button_id=EE2WLALDX9GCA" class="flex items-center py-3 px-5 rounded-full border-4 border-main-color-300 border-opacity-80">
 						<i class="paypal mr-2"></i> <span class="block text-lg content">Donate with PayPal</span>
 					</a>
 				</div>
