--- a/src/pages/sponsors.astro
+++ b/src/pages/sponsors.astro
@@ -66,7 +66,7 @@ import sponsors from '@data/sponsors.json'
 							</a>	
 						))}
 					</span>
-					<span class="border-b-4 border-opacity-30 border-accent-color border-dotted w-full block mb-4"/>
+					<span class="border-b-4 border-opacity-40 border-title-primary-color border-dotted w-full block mb-4"/>
 					<Markdown>
 						We thank the original [HONK! festival](http://honkfest.org/)—the mothership—which inspired our festival and has since seen other offspring arise in Austin, Detroit, Australia, Brazil and beyond!
 					</Markdown>
