--- a/src/pages/volunteer/new-volunteer-form.astro
+++ b/src/pages/volunteer/new-volunteer-form.astro
@@ -17,7 +17,7 @@ import BaseLayout from '@layouts/BaseLayout.astro';
 								<label for="name">Name</label>
 							</p>
 							<div class="mt-1">
-								<input type="text" name="name" id="name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full border-gray-300 rounded-md px-3 py-2" required>
+								<input type="text" name="name" id="name" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full bg-main-color-200 bg-opacity-80 rounded-md px-3 py-2" required>
 							</div>
 						</div>
 						<div >
@@ -25,7 +25,7 @@ import BaseLayout from '@layouts/BaseLayout.astro';
 								<label for="email">Email</label>
 							</p>
 							<div class="mt-1">
-								<input type="email" name="email" id="email" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full border-gray-300 rounded-md px-3 py-2" required>
+								<input type="email" name="email" id="email" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full bg-main-color-200 bg-opacity-80 rounded-md px-3 py-2" required>
 							</div>
 						</div>
 						<div >
@@ -33,7 +33,7 @@ import BaseLayout from '@layouts/BaseLayout.astro';
 								<label for="phone">Phone</label>
 							</p>
 							<div class="mt-1">
-								<input type="tel" name="phone" id="phone" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full border-gray-300 rounded-md px-3 py-2">
+								<input type="tel" name="phone" id="phone" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full bg-main-color-200 bg-opacity-80 rounded-md px-3 py-2">
 							</div>
 						</div>
 						
@@ -44,7 +44,7 @@ import BaseLayout from '@layouts/BaseLayout.astro';
 								Comments
 							</label>
 						</p>
-						<textarea name="comments" id="comments" rows="10" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md px-3 py-2"></textarea>
+						<textarea name="comments" id="comments" rows="10" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border bg-main-color-200 bg-opacity-50 rounded-md px-3 py-2"></textarea>
 					</section>
 				</div>
 				<div>
