--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,9 @@ const postColumns = (index) => {
 
     <!-- INFO BLOCK -->
     <section itemscope itemtype="https://schema.org/Event" class="w-full col-span-6 sm:col-span-3 content-container" >
-      <div class="flex flex-col justify-between items-center h-full text-2xl sm:text-3xl  font-medium tracking-wide">
+      <div class="l-jagged-bg bg-[length:100px_25px] opacity-30"/>
+	    <div class="r-jagged-bg  bg-[length:100px_25px] opacity-30"/>
+      <div class="flex flex-col justify-between items-center h-full text-2xl sm:text-3xl  font-medium tracking-wide z-10">
         <span class="block text-title-primary-color text-center mb-2 hidden md:block font-emphasis" itemprop="name">
           <span class="text-main-color-300 ">HONK!</span> FEST WEST
         </span>
@@ -50,8 +52,18 @@ const postColumns = (index) => {
       </div>
     </section>
 
+    <section class="w-full col-span-6 sm:col-span-3 row-span-2 content-container flex ">
+      <div class="l-jagged-bg bg-[length:100px_25px] opacity-30"/>
+	    <div class="r-jagged-bg  bg-[length:100px_25px] opacity-30"/>
+
+      <div class="h-[22rem] z-10 w-full flex justify-center">
+        <Image src="https://ik.imagekit.io/thegoldendino/hfw/festival/2022/poster-v10_09PoxkboF.png?ik-sdk-version=javascript-1.4.3&updatedAt=1648701795025" alt="HONK! FEST WEST poster" className="h-full" />
+      </div>
+    </section>
+
     <!-- NEWSLETTER BLOCK -->
     <section class="w-full col-span-6 sm:col-span-3 content-container">
+
       <div class="flex flex-col items-center h-full justify-center font-emphasis font-medium">
         <span class="block text-title-primary-color mb-2 tracking-wide text-2xl md:text-3xl">
           NEWSLETTER
@@ -67,7 +79,7 @@ const postColumns = (index) => {
 
           <div id="mc_embed_signup_scroll" class="flex flex-col justify-center items-center w-full">
             <div class="hidden md:flex w-full md:mb-4 justify-center items-center">
-              <label class="text-main-color-300 mr-2 mb-0 block text-center text-2xl md:text-3xl " for="mce-EMAIL">
+              <label class="text-main-color-300 mr-2 mb-0 block text-center text-2xl md:text-3xl z-10" for="mce-EMAIL">
                 EMAIL:
               </label>
               <input type="email" value="" name="EMAIL" class="bg-main-color-200 bg-opacity-80 block w-full font-base text-lg px-2 py-1" id="mce-EMAIL">
@@ -77,8 +89,8 @@ const postColumns = (index) => {
               <div class="hidden" id="mce-success-response"></div>
             </div>
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px" aria-hidden="true">
-              <input type="text" name="b_ef3f62323075a304e4a1428e3_b6e69bd855" tabindex="-1" value="">
+            <div  style="position: absolute; left: -5000px" aria-hidden="true">
+              <input  type="text" name="b_ef3f62323075a304e4a1428e3_b6e69bd855" tabindex="-1" value="">
             </div>
 
             <input 
@@ -86,14 +98,16 @@ const postColumns = (index) => {
               value="Subscribe" 
               name="subscribe" 
               id="mc-embedded-subscribe" 
-              class=" text-main-color-200 bg-accent-color bg-opacity-80 hover:bg-opacity-90 rounded font-base text-base sm:text-lg px-2 py-1">
+              class="z-20 text-main-color-200 bg-accent-color bg-opacity-80 hover:bg-opacity-90 rounded font-base text-base sm:text-lg px-2 py-1">
           </div>
         </form>
       </div>
     </section>
 
+
+
     <article class="w-full content-container col-span-6 flex flex-col md:flex-row">
-      <div class="md:w-1/3 flex-none md:pr-6 flex mb-3 md:mb-0 flex-col">
+      <div class="md:w-1/3 flex-none md:pr-6 flex mb-3 md:mb-0 flex-col z-10">
         <Image
           src="https://ik.imagekit.io/thegoldendino/hfw/posts/volunteer_eH1tKog7f.jpg?updatedAt=1640916421073"
           alt="Volunteer!"
@@ -102,7 +116,7 @@ const postColumns = (index) => {
           className="h-auto max-h-60 w-auto mx-auto"
         />
       </div>
-      <div>
+      <div class="z-10">
         <Title title="Volunteer Coordinator" subtitle="Needed" />
         <p>
           The Volunteer Coordinator is our chief cat wrangler and fun instigator, and the source of sunshine for all our eager volunteers. Responsible for the recruitment, retention, rostering and wrangling of both year-round and event-based volunteers, the VC is the most vital link in the entire festival’s chain of awesomeness.
@@ -114,7 +128,7 @@ const postColumns = (index) => {
     </article>
 
     <article class="w-full content-container col-span-6 flex flex-col md:flex-row">
-      <div class="md:w-1/4 flex-none pr-6 flex mb-3 md:mb-0 md:flex-col">
+      <div class="md:w-1/4 flex-none pr-6 flex mb-3 md:mb-0 md:flex-col z-10">
         <Image 
           src="https://ik.imagekit.io/thegoldendino/hfw/carousel/2021/honkfestwest_2021_th-52_ieqmszPrw.jpg?updatedAt=1636925468749"
           alt="Neon Brass Party - H!FW - 2021"
@@ -166,6 +180,8 @@ const postColumns = (index) => {
     <!-- POST BLURBS -->
     {posts.map((post, index) => (
       <article class={`w-full content-container sm:col-span-6 ${postColumns(index).span}`}>
+        <div class="l-jagged-bg bg-[length:100px_25px] opacity-30"/>
+	      <div class="r-jagged-bg  bg-[length:100px_25px] opacity-30"/>
         <PostBlurb post={post} cols={postColumns(index).cols}/>
       </article>
     ))}
