Index | Reduce poster image size

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ const postColumns = (index) => {
 
 
       <div class="h-[22rem] z-10 w-full flex justify-center">
-        <Image src="https://ik.imagekit.io/thegoldendino/hfw/festival/2022/poster-v10_09PoxkboF.png?ik-sdk-version=javascript-1.4.3&updatedAt=1648701795025" alt="HONK! FEST WEST poster" className="h-full" />
+        <Image src="https://ik.imagekit.io/thegoldendino/hfw/festival/2022/poster-v10_09PoxkboF.png?ik-sdk-version=javascript-1.4.3&updatedAt=1648701795025&tr=w-460" alt="HONK! FEST WEST poster" className="h-full" />
       </div>
     </section>
 
