Index | Add dino dates

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,36 +31,43 @@ const postColumns = (index) => {
 ---
 
 <BaseLayout title="Home">
-  <div class="grid grid-cols-1 sm:grid-cols-6 gap-4 sm:gap-6 w-full">
+  <div class="grid grid-cols-1 sm:grid-cols-6 gap-4 sm:gap-6 w-full mt-16">
 
     <!-- INFO BLOCK -->
-    <section itemscope itemtype="https://schema.org/Event" class="w-full col-span-6 sm:col-span-3 content-container" >
+    <section itemscope itemtype="https://schema.org/Event" class="w-full col-span-6 lg:col-span-3 content-container z-10" >
 
-      <div class="flex flex-col justify-between items-center h-full text-2xl sm:text-3xl  font-medium tracking-wide z-10">
-        <span class="block text-title-primary-color text-center mb-2 hidden md:block font-emphasis" itemprop="name">
+      <div class="flex flex-col justify-around items-center h-full text-2xl sm:text-3xl  font-medium tracking-wide z-10">
+        <span class=" text-title-primary-color text-center mb-2 hidden  font-emphasis" itemprop="name">
           <span class="text-main-color-300 ">HONK!</span> FEST WEST
         </span>
-        <div class="flex flex-col lg:flex-row justify-center items-center md:mb-2 w-full">
-          <span class="block mb-2 lg:mb-0 text-main-color-300  tracking-normal md:mr-2 font-emphasis text-center">
-            <time itemprop="startDate" content="2022-06-03"><span class="text-title-primary-color">JUNE</span> 3 - 5, 2022</time>
+        <div class="flex flex-col lg:flex-row justify-center items-center  w-full">
+          <span class="block mb-2 lg:mb-0 text-title-primary-color  tracking-normal md:mr-2 font-emphasis text-center">
+            <time itemprop="startDate" content="2022-06-03">JUNE 3 - 5, 2022</time>
           </span>
         </div>
-        <span class="text-title-primary-color text-center block font-emphasis" itemprop="location">
-          <span class="text-main-color-300 ">SEATTLE,</span> WA
+        <span class="text-main-color-300 text-center block font-emphasis" itemprop="location">
+          SEATTLE, WA
         </span>
       </div>
     </section>
 
-    <section class="w-full col-span-6 sm:col-span-3 row-span-2 content-container flex ">
+    <!-- <section class="w-full col-span-6 sm:col-span-3 row-span-2 content-container flex ">
 
 
       <div class="h-[22rem] z-10 w-full flex justify-center">
-        <Image src="https://ik.imagekit.io/thegoldendino/hfw/festival/2022/poster-v10_09PoxkboF.png?ik-sdk-version=javascript-1.4.3&updatedAt=1648701795025&tr=w-460" alt="HONK! FEST WEST poster" className="h-full" />
+        <Image src="https://ik.imagekit.io/thegoldendino/hfw/festival/2022/dino-dates_95_pTvnnB.png?ik-sdk-version=javascript-1.4.3&updatedAt=1648711789652" alt="HONK! FEST WEST poster" className="h-full" />
       </div>
+    </section> -->
+
+    <section class="col-span-6 lg:col-span-3 row-span-2 flex justify-center  rounded-full w-full">
+      <Image 
+        src="https://ik.imagekit.io/thegoldendino/hfw/festival/2022/dino-dates_95_pTvnnB.png?ik-sdk-version=javascript-1.4.3&updatedAt=1648711789652&tr=w-600" 
+        alt="HONK! FEST WEST poster" 
+        className="w-[400px]  lg:scale-[1.7]  lg:translate-x-4 " />
     </section>
 
     <!-- NEWSLETTER BLOCK -->
-    <section class="w-full col-span-6 sm:col-span-3 content-container">
+    <section class="w-full col-span-6 lg:col-span-3 content-container">
 
       <div class="flex flex-col items-center h-full justify-center font-emphasis font-medium">
         <span class="block text-title-primary-color mb-2 tracking-wide text-2xl md:text-3xl">
@@ -104,7 +111,7 @@ const postColumns = (index) => {
 
 
 
-    <article class="w-full content-container col-span-6 flex flex-col md:flex-row">
+    <article class="w-full content-container col-span-6 lg:col-span-6 flex flex-col md:flex-row lg:mt-20  ">
       <div class="md:w-1/3 flex-none md:pr-6 flex mb-3 md:mb-0 flex-col z-10">
         <Image
           src="https://ik.imagekit.io/thegoldendino/hfw/posts/volunteer_eH1tKog7f.jpg?updatedAt=1640916421073"
