--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,9 +11,9 @@ const activeLink = (link) => {
 <a class="absolute right-5 top-0 text-white opacity-10" href="/portal">+</a>
 
 <!-- H!FW LOGO -->
-<div class="border-y-[0.5rem] border-opacity-90 border-[#0E4341] mt-6 sm:mt-12 mb-4 sm:mb-8">
-<div class="flex justify-center  w-full bg-[#962C2B]    shadow-lg relative">
-	<div class="l-jagged-bg bg-[length:100px_25px] sm:bg-[length:300px_50px]"/>
+
+<div class="flex justify-center  w-full bg-[#962C2B]    shadow-lg relative z-10 border-y-[1rem] border-opacity-80 border-[#0E4341] mt-6 sm:mt-12 mb-4 sm:mb-8">
+	<div class="l-jagged-bg bg-[length:100px_25px] sm:bg-[length:300px_50px] opacity-90"/>
 	<div class="r-jagged-bg  bg-[length:100px_25px] sm:bg-[length:300px_50px]"/>
 	<a class="block mx-auto sm:w-2/3 lg:w-2/5 max-h-full z-0" href="/">
 		<Image
@@ -25,14 +25,14 @@ const activeLink = (link) => {
 		/>
 	</a>
 </div>
-</div>
 
-<nav class="w-full pb-4">
-	<ul class="flex flex-wrap justify-center items-center w-full">
+
+<nav class="w-full pb-4 ">
+	<ul class="flex flex-wrap justify-center items-center w-full ">
 
 		<!-- MAIN NAV -->
 		{navigation.main.map((item) => (
-			<li class={`text-2xl sm:text-3xl font-title flex items-center my-2 bg-opacity-90 text-main-color-600 focus:bg-[#962C2B] hover:bg-opacity-100 pt-2 pb-1 px-2 mx-4 rounded-full shadow-lg  ${activeLink(item.link)}`}>
+			<li class={`text-2xl sm:text-3xl font-title flex items-center my-2 bg-opacity-90 text-main-color-600 focus:bg-[#962C2B] hover:bg-opacity-100 pt-2 pb-1 px-2 mx-4 rounded-full shadow-lg z-10  ${activeLink(item.link)}`}>
 				<a
 					class={` mx-4 sm:mx-2 block  font-semibold`}
 					href={ item.link }
@@ -44,7 +44,7 @@ const activeLink = (link) => {
 		))}
 
 		<!-- SOCIAL NAV -->
-		<li class="text-2xl text-main-color-900 ml-2 my-2 flex">
+		<li class="text-2xl text-main-color-900 ml-2 my-2 flex z-10">
 			{Object.keys(navigation.social).map((item) => (
 				<div>
 					<div class="hidden sm:block px-1 h-9">
