--- a/src/components/base-head/OpenGraph.astro
+++ b/src/components/base-head/OpenGraph.astro
@@ -10,7 +10,7 @@
 />
 <meta
 	property="og:image"
-	content="https://ik.imagekit.io/thegoldendino/hfw/festival/2021/honk-fest-west-2021_6fGvHoXwbRc.png?updatedAt=1628637221383&tr=w-1200,h-630,fo-auto"
+	content="https://ik.imagekit.io/thegoldendino/hfw/festival/2022/opengraph_Xk_6_gcnQ.png?ik-sdk-version=javascript-1.4.3&updatedAt=1648711372654"
 />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
