Index | Update dino image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,8 +61,8 @@ const postColumns = (index) => {
 
     <section class="col-span-6 lg:col-span-3 row-span-2 flex justify-center  rounded-full w-full">
       <Image 
-        src="https://ik.imagekit.io/thegoldendino/hfw/festival/2022/dino-dates_95_pTvnnB.png?ik-sdk-version=javascript-1.4.3&updatedAt=1648711789652&tr=w-600" 
-        alt="HONK! FEST WEST poster" 
+        src="https://ik.imagekit.io/thegoldendino/hfw/festival/2022/dino-dates_nMvqTkwT5.png?ik-sdk-version=javascript-1.4.3&updatedAt=1648738004275&tr=w-600" 
+        alt="When Marching Bands Ruled the Earth" 
         className="w-[400px]  lg:scale-[1.7]  lg:translate-x-4 " />
     </section>
 
