Index | Fix dino positioning

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const postColumns = (index) => {
 ---
 
 <BaseLayout title="Home">
-  <div class="grid grid-cols-1 sm:grid-cols-6 gap-4 sm:gap-6 w-full mt-16">
+  <div class="grid grid-cols-1 sm:grid-cols-6 gap-4 sm:gap-6 w-full lg:mt-16">
 
     <!-- INFO BLOCK -->
     <section itemscope itemtype="https://schema.org/Event" class="w-full col-span-6 lg:col-span-3 content-container z-10" >
@@ -51,19 +51,11 @@ const postColumns = (index) => {
       </div>
     </section>
 
-    <!-- <section class="w-full col-span-6 sm:col-span-3 row-span-2 content-container flex ">
-
-
-      <div class="h-[22rem] z-10 w-full flex justify-center">
-        <Image src="https://ik.imagekit.io/thegoldendino/hfw/festival/2022/dino-dates_95_pTvnnB.png?ik-sdk-version=javascript-1.4.3&updatedAt=1648711789652" alt="HONK! FEST WEST poster" className="h-full" />
-      </div>
-    </section> -->
-
     <section class="col-span-6 lg:col-span-3 row-span-2 flex justify-center  rounded-full w-full">
       <Image 
         src="https://ik.imagekit.io/thegoldendino/hfw/festival/2022/dino-dates_nMvqTkwT5.png?ik-sdk-version=javascript-1.4.3&updatedAt=1648738004275&tr=w-600" 
         alt="When Marching Bands Ruled the Earth" 
-        className="w-[400px]  lg:scale-[1.7]  lg:translate-x-4 " />
+        className="w-[400px] scale-[1.2] lg:scale-[1.6]  lg:-translate-y-2 lg:translate-x-4 " />
     </section>
 
     <!-- NEWSLETTER BLOCK -->
