Header | Change border size

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ const activeLink = (link) => {
 
 <!-- H!FW LOGO -->
 
-<div class="flex justify-center  w-full bg-[#962C2B]    shadow-lg relative z-10 border-y-[1rem] border-opacity-80 border-[#0E4341] mt-6 sm:mt-12 mb-4 sm:mb-8">
+<div class="flex justify-center  w-full bg-[#962C2B]    shadow-lg relative z-10 border-y-[.7rem] border-opacity-80 border-[#0E4341] mt-6 sm:mt-12 mb-4 sm:mb-8">
 	<div class="l-jagged-bg bg-[length:100px_25px] sm:bg-[length:300px_50px] opacity-90"/>
 	<div class="r-jagged-bg  bg-[length:100px_25px] sm:bg-[length:300px_50px]"/>
 	<a class="block mx-auto sm:w-2/3 lg:w-2/5 max-h-full z-0" href="/">
