--- a/src/components/old/VolunteerCoordinatorNeeded.astro
+++ b/src/components/old/VolunteerCoordinatorNeeded.astro
@@ -1,7 +1,7 @@
 ---
 import Title from '@components/Title.astro';
+import Image from '@components/Image.astro';
 ---
-    <article class="w-full content-container col-span-6 lg:col-span-6 flex flex-col md:flex-row lg:mt-20  ">
       <div class="md:w-1/3 flex-none md:pr-6 flex mb-3 md:mb-0 flex-col z-10">
         <Image
           src="https://ik.imagekit.io/thegoldendino/hfw/posts/volunteer_eH1tKog7f.jpg?updatedAt=1640916421073"
@@ -20,4 +20,3 @@ import Title from '@components/Title.astro';
 			    » Apply Here
 		    </a>
       </div>
-    </article>
