--- a/src/components/home/GiveBig.astro
+++ b/src/components/home/GiveBig.astro
@@ -6,10 +6,11 @@ import Image from '@components/Image.astro';
 <div class="md:w-1/3 flex-none md:pr-6 flex mb-3 md:mb-0 flex-col z-10">
 	<Image
 		src="https://ik.imagekit.io/thegoldendino/hfw/2022/GiveBIG-2022_mlRVu5KcO?ik-sdk-version=javascript-1.4.3&updatedAt=1650776055702"
-		alt="Volunteer!"
+		alt="GiveBIG 2022"
 
 		className="h-auto w-auto mx-auto"
 	/>
+
 </div>
 <div class="z-10">
 	<p>
