--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Title from '@components/Title.astro'
 import NewsletterForm from '@components/NewsletterForm.astro'
 import Slideshow from '../components/slideshow/Slideshow.jsx'
 import GiveBig from '@components/home/GiveBig.astro'
+import BonfireMerch from '@components/home/BonfireMerch.astro'
 import slides from '@data/slideshow.json'
 import volunteer_data from '@data/volunteer.json'
 
@@ -74,6 +75,10 @@ const postColumns = (index) => {
 
     <article class="w-full content-container col-span-6 flex flex-col md:flex-row">
       <GiveBig />
+    </article>
+
+    <article class="w-full content-container col-span-6 flex flex-col md:flex-row">
+      <BonfireMerch />
     </article>
 
     <!-- POST BLURBS -->
